# qdp

./: .gitignore  .gitmodules  README  configure.ac
include/: Makefile.am  qdp.h  qdp_bytecount.h  qdp_cuda.h  qdp_cudp_just.h  qdp_device_storage.h  qdp_flopcount.h  qdp_io.h  qdp_multi.h  qdp_newops.h  qdp_newtags.h  qdp_outer.h  qdp_pretty.h  qdp_qlimewriter.h  qdp_scalar_specific.h  qdp_threadmetric.h
include/newtags/: qdp_flatten.h  qdp_on_device.h  qdp_scalar_to_device.h
lib/: Makefile.am  qdp_cuda.cu  qdp_cuda_just.cc  qdp_cudp_just.cc  qdp_default_allocator.cc  qdp_device_storage.cc  qdp_io.cc  qdp_pretty.cc  qdp_qlimewriter.cc  qdp_scalar_init.cc  qdp_scalar_layout.cc  qdp_threadmetric.cc
other_libs/: Makefile.am
other_libs/cudp/: Makefile.am  configure.ac
other_libs/cudp/autom4te.cache/: output.0  output.1  traces.0  traces.1
other_libs/cudp/bin.old/: Makefile.am  pretty_gpu.pl
other_libs/cudp/include/: Makefile.am  cuQDPOperators.h  cudp.h  cudp_allocator.h  cudp_byteorder.h  cudp_cell.h  cudp_config.h  cudp_config_internal.h.in  cudp_crc32.h  cudp_db.h  cudp_db_imp.h  cudp_default_allocator.h  cudp_defs.h  cudp_disk_map_slice.h  cudp_dispatch.h  cudp_forward.h  cudp_globalfuncs.h  cudp_iface.h  cudp_inner.h  cudp_io.h  cudp_layout.h  cudp_map.h  cudp_map_obj.h  cudp_map_obj_disk.h  cudp_map_obj_memory.h  cudp_map_obj_null.h  cudp_multi.h  cudp_newops.h  cudp_newtags.h  cudp_optops.h  cudp_outer.h  cudp_outersubtype.h  cudp_params.h  cudp_parscalar_specific.h  cudp_precision.h  cudp_primcolormat.h  cudp_primcolorvec.h  cudp_primgamma.h  cudp_primitive.h  cudp_primitive_cell32.h  (+41 more)
other_libs/cudp/include/PETE/: cuCreateLeaf.h  cuForEach.h  cuForEachInOrder.h  cuFunctors.h  cuPETE.h  cuTreeNodes.h  cuTypeComputations.h
other_libs/cudp/include/PETE/CVS/: Repository
other_libs/cudp/include/cuPETE/: Makefile.am  OperatorTags.h.save  cuCombiners.h  cuForEach.h  cuForEachInOrder.h  cuFunctors.h  cuOperatorTags.h  cuPETE.h  cuScalar.h
other_libs/cudp/include/cuPETE/CVS/: Entries  Root
other_libs/cudp/include/cu_newtags/: cudp_flatten.h
other_libs/cudp/include/cu_scalarsite_generic/: generic_blas_vaxpby3.h  qdp_scalarsite_generic_blas.h  qdp_scalarsite_generic_linalg.h
other_libs/cudp/scripts/: Makefile.am  cudp_codegen.pl
