cuPETE_HDRS =  PETE/cuCombiners.h \
	       PETE/cuFunctors.h \
              PETE/cuPETE.h \
             PETE/cuTreeNodes.h \
             PETE/cuCreateLeaf.h \
             PETE/cuForEach.h \
             PETE/cuForEachInOrder.h \
             PETE/cuOperatorTags.h \
             PETE/cuScalar.h \
             PETE/cuTypeComputations.h


# HEADERS for the memory allocator
cuMEMORY_HDRS = cudp_allocator.h \
	      cudp_default_allocator.h

# All the include files - avoid flattening of dirs by using nobase
include_HEADERS = \
		cudp_config.h \
		cudp_forward.h \
		cudp_globalfuncs.h \
		cudp_inner.h \
		cudp_layout.h \
		cudp_map.h \
		cudp_multi.h \
		cudp_newops.h \
		cudp_optops.h \
		cudp_outer.h \
		cudp_outersubtype.h \
		cudp_precision.h \
		cudp_primcolormat.h \
		cudp_primcolorvec.h \
		cudp_primgamma.h \
		cudp_primitive.h \
		cudp_primmatrix.h \
		cudp_primscalar.h \
		cudp_primseed.h \
		cudp_primspinmat.h \
		cudp_primspinvec.h \
		cudp_primvector.h \
		cudp_util.h \
		cudp_qdpexpr.h \
		cudp.h \
		cuQDPOperators.h \
		cudp_qdpsubtype.h \
		cudp_qdptype.h \
		cudp_random.h \
		cudp_reality.h \
		cudp_simpleword.h \
		cudp_specializations.h \
		cudp_subset.h \
		cudp_traits.h \
		cudp_iface.h \
		cudp_dispatch.h \
	        cudp_scalar_specific.h \
	 	cudp_defs.h \
		cudp_scalarsite_defs.h \
                $(cuPETE_HDRS) \
		$(cuMEMORY_HDRS)




